--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,6 @@
 body {
   padding: 32px;
   margin: 32px;
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Segoe UI", Arial, sans-serif;
   font-size: 16px;
 }
