--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,10 +17,19 @@
                 <li><span><i class="ms-Icon enlarge ms-Icon--ribbon"></i>Adds value to your word skills</span></li>
                 <li><span><i class="ms-Icon enlarge ms-Icon--glasses"></i>Enables you to be more productive</span></li>
             </ul>
-            <button class="ms-firstrun-value__action--primary ms-bgColor-themePrimary ms-Button ms-Button--command ms-fontColor-white ms-font-m">
-                    <span class="ms-Button-label">Get Started!</span>
+            <button class="ms-firstrun-value__action--primary ms-bgColor-themePrimary ms-Button ms-Button--command ms-fontColor-white ms-font-m" (click)="onClick()">
+                    <span class="ms-Button-label">Generate HTML!</span>
                     <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--chevronThickRight"></i></span>
                 </button>
         </div>
+        <section>
+        <ul>
+        <li><a [routerLink]="['Repositories']">Recipes</a></li>
+        <li><a [routerLink]="['Files']">Shopping List</a></li>
+        </ul>
+        <div class="main">
+        <router-outlet></router-outlet>
+        </div>
+        </section>
     </section>
 </main>
