copied required files

--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/app/home/home.component.html
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/app/home/home.component.html
@@ -24,8 +24,8 @@
         </div>
         <section>
         <ul>
-        <li><a [routerLink]="['Repositories']">Recipes</a></li>
-        <li><a [routerLink]="['Files']">Shopping List</a></li>
+        <li><a [routerLink]="['/repositories']">Recipes</a></li>
+        <li><a [routerLink]="['/files']">Shopping List</a></li>
         </ul>
         <div class="main">
         <router-outlet></router-outlet>
