--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/app/home/home.component.html
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 ﻿<main class="ms-firstrun-value">
     <section class="ms-firstrun-value__header ms-bgColor-themePrimary">
         <div class="ms-firstrun-value__logo">
-            <img src="www/assets/images/logo.png" />
+            <img src="assets/images/logo.png" />
         </div>
         <div class="ms-firstrun-value__title">
             <h1 class="ms-font-xl ms-fontWeight-light ms-fontColor-white">WELCOME</h1>
