--- a/Word-Addin-Ang2-Word-to-MDWeb/src/app/home/home.component.html
+++ b/Word-Addin-Ang2-Word-to-MDWeb/src/app/home/home.component.html
@@ -1,35 +1,7 @@
-﻿<main class="ms-firstrun-value">
-    <section class="ms-firstrun-value__header ms-bgColor-themePrimary">
-        <div class="ms-firstrun-value__logo">
-            <img src="assets/images/logo.png" />
-        </div>
-        <div class="ms-firstrun-value__title">
-            <h1 class="ms-font-xl ms-fontWeight-light ms-fontColor-white">WELCOME</h1>
-        </div>
-        <div class="ms-firstrun-value__subtitle ms-font-m ms-fontWeight-light ms-fontColor-white">
-            <p>This add-in helps you write your Github documentation using Word!</p>
-        </div>
-    </section>
-    <section class="ms-firstrun-value__content">
-        <div class="ms-font-m ms-fontColor-themePrimary ms-firstrun-value__content--centered">
-            <ul class="ms-firstrun-value__list ms-fontWeight-regular">
-                <li><span><i class="ms-Icon enlarge ms-Icon--coffee"></i>Helps you produce documentation fast</span></li>
-                <li><span><i class="ms-Icon enlarge ms-Icon--ribbon"></i>Adds value to your word skills</span></li>
-                <li><span><i class="ms-Icon enlarge ms-Icon--glasses"></i>Enables you to be more productive</span></li>
-            </ul>
-            <button class="ms-firstrun-value__action--primary ms-bgColor-themePrimary ms-Button ms-Button--command ms-fontColor-white ms-font-m" (click)="onClick()">
-                    <span class="ms-Button-label">Generate HTML!</span>
-                    <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--chevronThickRight"></i></span>
-                </button>
-        </div>
+﻿<main>
         <section>
-        <ul>
-        <li><a [routerLink]="['/repositories']">Recipes</a></li>
-        <li><a [routerLink]="['/files']">Shopping List</a></li>
-        </ul>
         <div class="main">
         <router-outlet></router-outlet>
         </div>
         </section>
-    </section>
 </main>
