applying angular style guide and completing migration

--- a/WordToGitHub/src/app/home/home.component.html
+++ b/WordToGitHub/src/app/home/home.component.html
@@ -1,7 +1,3 @@
-﻿<main>
-        <section>
-        <div class="main">
-        <router-outlet></router-outlet>
-        </div>
-        </section>
+﻿<main class="main">
+    <router-outlet></router-outlet>
 </main>
