--- a/WordToGitHub/src/app/login/login.component.html
+++ b/WordToGitHub/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                 <li><span><i class="ms-Icon enlarge ms-Icon--ribbon"></i>Adds value to your word skills</span></li>
                 <li><span><i class="ms-Icon enlarge ms-Icon--glasses"></i>Enables you to be more productive</span></li>
             </ul>
-            <button class="ms-firstrun-value__action--primary ms-bgColor-themePrimary ms-Button ms-Button--command ms-fontColor-white ms-font-m" (click)="onClick()">
+            <button class="ms-firstrun-value__action--primary ms-bgColor-themePrimary ms-Button ms-Button--command ms-fontColor-white ms-font-m" (click)="login()">
                 <span class="ms-Button-label">Sign in to GitHub</span>
                 <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--chevronThickRight"></i></span>
             </button>
