--- a/WordToGitHub/src/app/repo-list/repo-list.component.html
+++ b/WordToGitHub/src/app/repo-list/repo-list.component.html
@@ -1,6 +1,10 @@
-﻿<h2>Repositories</h2>
+﻿<div class="page-header ms-bgColor-themeDark">
+    <h1 class="ms-font-xl ms-fontColor-themeLighter">Repositories</h1>
+</div>
 <ul class="ms-List">
-    <li class="ms-ListItem is-selectable" *ngFor="let item of repositories" (click)="onSelect(item)">
-        <p class="ms-ListItem-primaryText">{{item.name}}</p>
+    <li class="ms-ListItem" *ngFor="let repository of (repositories | async)" (click)="onSelect(repository)">
+        <span class="ms-ListItem-primaryText">{{repository.name}}</span>
+        <span class="ms-ListItem-secondaryText">@officedev</span>
+        <span class="ms-ListItem-tertiaryText">{{repository.description}}</span>
     </li>
 </ul>
