--- a/WordToGitHub/src/app/login/login.component.scss
+++ b/WordToGitHub/src/app/login/login.component.scss
@@ -1,39 +1,51 @@
 ﻿/* Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See full license in root of repo. */
-.ms-firstrun-value {
+.ms-firstrun-login {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     height: 100%;
+    text-align: center;
 }
 
-.ms-firstrun-value__header {
-    padding: 20px 0;
-    min-height: 220px;
-    max-height: 300px;
+.ms-firstrun-login__header {
+    padding: 20px;
+    min-height: 160px;
+    max-height: 250px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
 }
 
-    .ms-firstrun-value__header h1 {
+    .ms-firstrun-login__header h1 {
         letter-spacing: 5px;
     }
 
-    .ms-firstrun-value__header p {
+    .ms-firstrun-login__header p {
         margin-top: 7px;
     }
 
-.ms-firstrun-value__title, .ms-firstrun-value__subtitle {
-    padding: 0 20px;
+.ms-firstrun-login__header--skip {
+    text-align: right;
 }
 
-.ms-firstrun-value__logo {
+.ms-firstrun-login__header--image {
+    background: transparent no-repeat center center;
+    background-image: url("../../../assets/login-placeholder.png");
+    background-size: cover;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: stretch;
+    align-items: stretch;
+    flex: 0 1 0;
+    min-height: 200px;
+}
+
+.ms-firstrun-login__welcome {
     width: 100%;
     height: 100%;
     flex: 1 1 0;
-    background: transparent no-repeat center center;
-    background-size: contain;
-    background-image: url("assets/images/logo-background-geometric.png");
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -41,44 +53,69 @@
     align-items: center;
 }
 
-    .ms-firstrun-value__logo img {
-        height: 80px;
+    .ms-firstrun-login__welcome img {
+        height: 100px;
     }
 
-.ms-firstrun-value__content {
+.ms-firstrun-login__player {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: stretch;
+    align-items: stretch;
+}
+
+    .ms-firstrun-login__player img {
+        height: 100%;
+    }
+
+.ms-firstrun-login__content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
     height: 100%;
     flex: 1 1 0;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
-.ms-firstrun-value__content--centered {
+.ms-firstrun-login__content--centered {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
 }
 
-.ms-firstrun-value__list {
+.ms-firstrun-login__content--caption {
+    margin-top: 5px;
+}
+
+.ms-firstrun-login__content--valuestatement {
+    padding-top: 50px;
+}
+
+.ms-firstrun-login__list {
     list-style-type: none;
 }
 
-    .ms-firstrun-value__list li {
+    .ms-firstrun-login__list li {
         margin-bottom: 20px;
     }
 
-        .ms-firstrun-value__list li i {
+        .ms-firstrun-login__list li i {
             position: relative;
             top: 2px;
             margin-right: 10px;
         }
 
-.ms-firstrun-value__action--primary.ms-Button {
+.ms-firstrun-login__action--primary.ms-Button {
     align-self: center;
-    margin-top: 20px;
+    margin-top: 65px;
+    border: solid 2px #FFFFFF;
+    width: calc(100vw - 40px);
+    padding: 10px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -88,57 +125,35 @@
     transition: background ease 0.1s, color ease 0.1s;
 }
 
-    .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon {
-        margin-right: 0;
-        color: #0078d7;
-        -moz-transition: background ease 0.1s, color ease 0.1s;
-        -o-transition: background ease 0.1s, color ease 0.1s;
-        -webkit-transition: background ease 0.1s, color ease 0.1s;
-        transition: background ease 0.1s, color ease 0.1s;
+    .ms-firstrun-login__action--primary.ms-Button span.ms-Button-label {
+        color: #FFFFFF;
     }
 
-        .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon:active, .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon:hover {
-            background: transparent;
-            color: #333333;
-            cursor: pointer;
-        }
-
-        .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon:active {
-            background: transparent;
-        }
-
-        .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon.disabled {
-            opacity: 0.6;
-            pointer-events: none;
-            cursor: not-allowed;
-        }
-
-            .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon.disabled:active, .ms-firstrun-value__action--primary.ms-Button span.ms-Button-icon.disabled:hover {
-                background: transparent;
-            }
-
-    .ms-firstrun-value__action--primary.ms-Button span.ms-Button-label {
-        margin-right: 10px;
-        color: #0078d7;
-    }
-
-    .ms-firstrun-value__action--primary.ms-Button:active, .ms-firstrun-value__action--primary.ms-Button:hover {
-        background: #eff6fc;
+    .ms-firstrun-login__action--primary.ms-Button:active, .ms-firstrun-login__action--primary.ms-Button:hover {
+        background: #FFFFFF;
         color: #0078d7;
         cursor: pointer;
     }
 
-    .ms-firstrun-value__action--primary.ms-Button:active {
-        background: #eff6fc;
+    .ms-firstrun-login__action--primary.ms-Button:active {
+        background: #FFFFFF;
     }
 
-    .ms-firstrun-value__action--primary.ms-Button.disabled {
+    .ms-firstrun-login__action--primary.ms-Button.disabled {
         opacity: 0.6;
         pointer-events: none;
         cursor: not-allowed;
     }
 
-        .ms-firstrun-value__action--primary.ms-Button.disabled:active, .ms-firstrun-value__action--primary.ms-Button.disabled:hover {
+        .ms-firstrun-login__action--primary.ms-Button.disabled:active, .ms-firstrun-login__action--primary.ms-Button.disabled:hover {
             background: transparent;
         }
 
+.ms-firstrun-login__button {
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
