--- a/WordToGitHub/src/app/repo-list/repo-list.component.html
+++ b/WordToGitHub/src/app/repo-list/repo-list.component.html
@@ -2,7 +2,7 @@
     <h1 class="ms-font-xl ms-fontColor-themeLighter">Repositories</h1>
 </div>
 <ul class="ms-List">
-    <li class="ms-ListItem" *ngFor="let repository of (repositories | async)" (click)="onSelect(repository)">
+    <li class="ms-ListItem" *ngFor="let repository of repositories" (click)="onSelect(repository)">
         <span class="ms-ListItem-primaryText">{{repository.name}}</span>
         <span class="ms-ListItem-secondaryText">@officedev</span>
         <span class="ms-ListItem-tertiaryText">{{repository.description}}</span>
