--- a/WordToGitHub/src/app/file-detail/file-detail.component.html
+++ b/WordToGitHub/src/app/file-detail/file-detail.component.html
@@ -1,4 +1,30 @@
-﻿<div class="jumbotron ms-bgColor-themeDarker">
-    <h1 class="ms-font-su ms-fontColor-themeLight">Voila!</h1>
-    <p class="ms-font-l ms-fontColor-themeLighterAlt">Press F5 to refresh and start again.</p>
-</div>
+﻿<main class="ms-landing-page__main">
+    <!--<section class="ms-landing-page__header">
+        <div class="ms-landing-page__header--center ms-font-m ms-fontWeight-light">
+            <div class="ms-SearchBox">
+                <input class="ms-SearchBox-field" type="text">
+                <label class="ms-SearchBox-label"><i class="ms-SearchBox-icon ms-Icon ms-Icon--search"></i>Search</label>
+                <button class="ms-SearchBox-closeButton"><i class="ms-Icon ms-Icon--x"></i></button>
+            </div>
+        </div>
+    </section>
+    <hr />-->
+    <section class="ms-landing-page__content ms-font-m ms-fontColor-neutralPrimary">
+        <article class="actions">
+            <h1 class="ms-landing-page__content__title ms-font-xl  ms-fontColor-neutralSecondary ms-fontWeight-light">Readme.MD</h1>
+            <div class="ms-landing-page-pushButton">
+                <button id="buttonPush" class="ms-Button" (click)="onPush()"></button>
+            </div>
+            <div class="ms-landing-page-discardButton">
+                <button id="buttonDiscard" class="ms-Button"  (click)="onDiscard()"></button>
+            </div>
+            <div class="ms-landing-page-pullButton">
+                <button id="buttonPull" class="ms-Button" (click)="onPull()"></button>
+            </div>
+        </article>
+    </section>
+</main>
+<footer class="footer">
+    <div id="word-github-brandbar">
+    </div>
+</footer>
