started sass migration and finished repository screen UI. WIP on pinnable filter

--- a/WordToGitHub/src/app/home/home.component.html
+++ b/WordToGitHub/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-﻿<main class="main">
-    <router-outlet></router-outlet>
-</main>
+﻿<div class="wg-container">
+    <main class="wg-container__main ms-font-m ms-fontColor-neutralPrimary">
+        <router-outlet></router-outlet>
+    </main>
+    <footer class="wg-container__footer"></footer>
+</div>
