--- a/WordToGitHub/src/app/repo-list/repo-list.component.html
+++ b/WordToGitHub/src/app/repo-list/repo-list.component.html
@@ -1,53 +1,34 @@
-﻿<main class="ms-landing-page__main">
-    <!--<section class="ms-landing-page__header">
-        <div class="ms-landing-page__header--center ms-font-m ms-fontWeight-light">
-            <div class="ms-SearchBox">
-                <input class="ms-SearchBox-field" type="text">
-                <label class="ms-SearchBox-label"><i class="ms-SearchBox-icon ms-Icon ms-Icon--search"></i>Search</label>
-                <button class="ms-SearchBox-closeButton"><i class="ms-Icon ms-Icon--x"></i></button>
+﻿<div class="repo-list-search ms-SearchBox">
+    <input class="repo-list-search__input ms-SearchBox-field ms-font-s-plus" type="search" [(ngModel)]="query">
+    <label class="repo-list-search__label ms-SearchBox-label ms-font-s-plus" [hidden]="query"><i class="ms-SearchBox-icon ms-Icon ms-Icon--search"></i>Search for repositories by name or url.</label>
+</div>
+<section class="repo-list-component" *ngIf="favoriteRepositories.length > 0">
+    <h1 class="repo-list-component__title ms-font-xl ms-fontColor-themeDarker ms-fontWeight-light">My favorites</h1>
+    <ul class="ms-List">
+        <li class="repo-list-item ms-ListItem" *ngFor="let repository of favoriteRepositories">
+            <div class="repo-list-item__content" (click)="onSelect(repository)">
+                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m-plus">{{repository.name}}</p>
+                <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-fontColor-themeDark ms-font-s-plus">@officedev</p>
             </div>
-        </div>
-    </section>
-    <hr />-->
-    <section class="ms-landing-page__content ms-font-m ms-fontColor-neutralPrimary">
-        <article class="favorites" *ngIf="favoriteRepositories.length > 0">
-            <h1 class="ms-landing-page__content__title ms-font-xl  ms-fontColor-themeDarker ms-fontWeight-light">Favorites</h1>
-            <ul class="ms-List">
-                <li class="ms-ListItem" *ngFor="let repository of favoriteRepositories">
-                    <!--<div class="repoIcon">
-                        <i class="ms-Icon ms-Icon--pinLeft"></i>
-                    </div>-->
-                    <div class="item" (click)="onSelect(repository)">
-                        <span class="repoDetail ms-ListItem-primaryText ms-font-m-plus">{{repository.name}}</span>
-                        <span class="repoDetail ms-ListItem-secondaryText ms-font-s-plus">@officedev</span>
-                        <div class="repoDetail ms-ListItem-selectionTarget js-toggleSelection"></div>
-                    </div>
-                    <div class="ms-ListItem-actions">
-                        <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--pinLeft" (click)="onUnpin(repository)"></i></div>
-                    </div>
-                </li>
-            </ul>
-        </article>
-        <hr class="ms-borderColor-neutralTertiaryAlt" />
-        <article class="my-github-repos">
-            <h1 class="ms-landing-page__content__title ms-font-xl ms-fontColor-themeDarker ms-fontWeight-light">My GitHub Repositories</h1>
-            <ul class="ms-List">
-                <li class="ms-ListItem" *ngFor="let repository of repositories">
-                    <div class="item" (click)="onSelect(repository)">
-                        <span class="ms-ListItem-primaryText ms-font-m-plus">{{repository.name}}</span>
-                        <span class="ms-ListItem-secondaryText ms-font-s-plus">@officedev</span>
-                        <span class="ms-ListItem-tertiaryText ms-font-s-plus">{{repository.description}}</span>
-                        <div class="ms-ListItem-selectionTarget js-toggleSelection"></div>
-                    </div>
-                    <div class="ms-ListItem-actions">
-                        <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--pinDown" (click)="onPin(repository)"></i></div>
-                    </div>
-                </li>
-            </ul>
-        </article>
-    </section>
-</main>
-<footer class="footer">
-    <div id="word-github-brandbar">
-    </div>
-</footer>
+            <div class="repo-list-item__actions ms-ListItem-actions">
+                <div class="repo-list-item__action ms-list-item__action"><i class="ms-Icon ms-Icon-large ms-Icon--pinLeft" (click)="onUnpin(repository)"></i></div>
+            </div>
+        </li>
+    </ul>
+</section>
+<hr class="repo-list-component__separator" />
+<section class="repo-list-component">
+    <h1 class="repo-list-component__title ms-font-xl ms-fontColor-themeDarker ms-fontWeight-light">Repositories</h1>
+    <ul class="ms-List">
+        <li class="repo-list-item ms-ListItem" *ngFor="let repository of repositories">
+            <div class="repo-list-item__content" (click)="onSelect(repository)">
+                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m-plus">{{repository.name}}</p>
+                <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-fontColor-themeDark ms-font-s-plus">@officedev</p>
+                <p class="repo-list-item__tertiary-text ms-ListItem-tertiaryText ms-font-s">{{repository.description}}</p>
+            </div>
+            <div class="repo-list-item__actions ms-ListItem-actions">
+                <div class="repo-list-item__action ms-ListItem-action"><i class="ms-Icon ms-Icon-large ms-Icon--pinDown" (click)="onPin(repository)"></i></div>
+            </div>
+        </li>
+    </ul>
+</section>
