restructuring project. set file-list as start url

--- a/WordToGitHub/src/app/file/file-list.component.scss
+++ b/WordToGitHub/src/app/file/file-list.component.scss
@@ -1,4 +1,7 @@
-﻿.ms-landing-page__main {
+﻿@import '../../styles/mixins.scss';
+@import '../../styles/theme.scss';
+
+.ms-landing-page__main {
     margin-bottom: 20px;
 }
 
